gui/src/antlrPackage/PropertyParser.java
// $ANTLR 3.4 ../src/antlrPackage/Property.g 2012-07-31 16:12:34

  //package lpn.parser.properties;
  //import lpn.parser.LhpnFile;
  package antlrPackage;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class PropertyParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSERT", "ASSERT_UNTIL", "BOOLEAN", "COMMA", "COMMENT", "DIV", "ELSE", "ELSEIF", "END", "EQUAL", "ESC_SEQ", "EXPONENT", "FLOAT", "GET", "GETEQ", "HEX_DIGIT", "ID", "IF", "INT", "INTEGER", "LCURL", "LET", "LETEQ", "LPARA", "MINUS", "MOD", "MULT", "NOT", "NOT_EQUAL", "OCTAL_ESC", "OR", "PLUS", "RCURL", "REAL", "RPARA", "SAMEAS", "SEMICOL", "STRING", "UNICODE_ESC", "WAIT", "WAIT_STABLE", "WS", "'property'"
    };

    public static final int EOF=-1;
    public static final int T__47=47;
    public static final int AND=4;
    public static final int ASSERT=5;
    public static final int ASSERT_UNTIL=6;
    public static final int BOOLEAN=7;
    public static final int COMMA=8;
    public static final int COMMENT=9;
    public static final int DIV=10;
    public static final int ELSE=11;
    public static final int ELSEIF=12;
    public static final int END=13;
    public static final int EQUAL=14;
    public static final int ESC_SEQ=15;
    public static final int EXPONENT=16;
    public static final int FLOAT=17;
    public static final int GET=18;
    public static final int GETEQ=19;
    public static final int HEX_DIGIT=20;
    public static final int ID=21;
    public static final int IF=22;
    public static final int INT=23;
    public static final int INTEGER=24;
    public static final int LCURL=25;
    public static final int LET=26;
    public static final int LETEQ=27;
    public static final int LPARA=28;
    public static final int MINUS=29;
    public static final int MOD=30;
    public static final int MULT=31;
    public static final int NOT=32;
    public static final int NOT_EQUAL=33;
    public static final int OCTAL_ESC=34;
    public static final int OR=35;
    public static final int PLUS=36;
    public static final int RCURL=37;
    public static final int REAL=38;
    public static final int RPARA=39;
    public static final int SAMEAS=40;
    public static final int SEMICOL=41;
    public static final int STRING=42;
    public static final int UNICODE_ESC=43;
    public static final int WAIT=44;
    public static final int WAIT_STABLE=45;
    public static final int WS=46;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public PropertyParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public PropertyParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return PropertyParser.tokenNames; }
    public String getGrammarFileName() { return "../src/antlrPackage/Property.g"; }


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "program"
    // ../src/antlrPackage/Property.g:24:1: program : property ;
    public final PropertyParser.program_return program() throws RecognitionException {
        PropertyParser.program_return retval = new PropertyParser.program_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        PropertyParser.property_return property1 =null;



        try {
            // ../src/antlrPackage/Property.g:25:2: ( property )
            // ../src/antlrPackage/Property.g:25:3: property
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_property_in_program61);
            property1=property();

            state._fsp--;

            adaptor.addChild(root_0, property1.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "program"


    public static class property_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "property"
    // ../src/antlrPackage/Property.g:28:1: property : 'property' ^ ID LCURL ! ( declaration )* ( statement )* RCURL !;
    public final PropertyParser.property_return property() throws RecognitionException {
        PropertyParser.property_return retval = new PropertyParser.property_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal2=null;
        Token ID3=null;
        Token LCURL4=null;
        Token RCURL7=null;
        PropertyParser.declaration_return declaration5 =null;

        PropertyParser.statement_return statement6 =null;


        CommonTree string_literal2_tree=null;
        CommonTree ID3_tree=null;
        CommonTree LCURL4_tree=null;
        CommonTree RCURL7_tree=null;

        try {
            // ../src/antlrPackage/Property.g:29:3: ( 'property' ^ ID LCURL ! ( declaration )* ( statement )* RCURL !)
            // ../src/antlrPackage/Property.g:29:3: 'property' ^ ID LCURL ! ( declaration )* ( statement )* RCURL !
            {
            root_0 = (CommonTree)adaptor.nil();


            string_literal2=(Token)match(input,47,FOLLOW_47_in_property72); 
            string_literal2_tree = 
            (CommonTree)adaptor.create(string_literal2)
            ;
            root_0 = (CommonTree)adaptor.becomeRoot(string_literal2_tree, root_0);


            ID3=(Token)match(input,ID,FOLLOW_ID_in_property75); 
            ID3_tree = 
            (CommonTree)adaptor.create(ID3)
            ;
            adaptor.addChild(root_0, ID3_tree);


            LCURL4=(Token)match(input,LCURL,FOLLOW_LCURL_in_property77); 

            // ../src/antlrPackage/Property.g:29:25: ( declaration )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==BOOLEAN||LA1_0==INT||LA1_0==REAL) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // ../src/antlrPackage/Property.g:29:26: declaration
            	    {
            	    pushFollow(FOLLOW_declaration_in_property81);
            	    declaration5=declaration();

            	    state._fsp--;

            	    adaptor.addChild(root_0, declaration5.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // ../src/antlrPackage/Property.g:29:40: ( statement )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0 >= ASSERT && LA2_0 <= ASSERT_UNTIL)||LA2_0==IF||(LA2_0 >= WAIT && LA2_0 <= WAIT_STABLE)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // ../src/antlrPackage/Property.g:29:41: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_property86);
            	    statement6=statement();

            	    state._fsp--;

            	    adaptor.addChild(root_0, statement6.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            RCURL7=(Token)match(input,RCURL,FOLLOW_RCURL_in_property90); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "property"


    public static class declaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "declaration"
    // ../src/antlrPackage/Property.g:32:1: declaration : ( BOOLEAN ^ ID ( COMMA ! ID )* SEMICOL !| REAL ^ ID ( COMMA ! ID )* SEMICOL !| INT ^ ID ( COMMA ! ID )* SEMICOL !);
    public final PropertyParser.declaration_return declaration() throws RecognitionException {
        PropertyParser.declaration_return retval = new PropertyParser.declaration_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token BOOLEAN8=null;
        Token ID9=null;
        Token COMMA10=null;
        Token ID11=null;
        Token SEMICOL12=null;
        Token REAL13=null;
        Token ID14=null;
        Token COMMA15=null;
        Token ID16=null;
        Token SEMICOL17=null;
        Token INT18=null;
        Token ID19=null;
        Token COMMA20=null;
        Token ID21=null;
        Token SEMICOL22=null;

        CommonTree BOOLEAN8_tree=null;
        CommonTree ID9_tree=null;
        CommonTree COMMA10_tree=null;
        CommonTree ID11_tree=null;
        CommonTree SEMICOL12_tree=null;
        CommonTree REAL13_tree=null;
        CommonTree ID14_tree=null;
        CommonTree COMMA15_tree=null;
        CommonTree ID16_tree=null;
        CommonTree SEMICOL17_tree=null;
        CommonTree INT18_tree=null;
        CommonTree ID19_tree=null;
        CommonTree COMMA20_tree=null;
        CommonTree ID21_tree=null;
        CommonTree SEMICOL22_tree=null;

        try {
            // ../src/antlrPackage/Property.g:33:3: ( BOOLEAN ^ ID ( COMMA ! ID )* SEMICOL !| REAL ^ ID ( COMMA ! ID )* SEMICOL !| INT ^ ID ( COMMA ! ID )* SEMICOL !)
            int alt6=3;
            switch ( input.LA(1) ) {
            case BOOLEAN:
                {
                alt6=1;
                }
                break;
            case REAL:
                {
                alt6=2;
                }
                break;
            case INT:
                {
                alt6=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }

            switch (alt6) {
                case 1 :
                    // ../src/antlrPackage/Property.g:33:4: BOOLEAN ^ ID ( COMMA ! ID )* SEMICOL !
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    BOOLEAN8=(Token)match(input,BOOLEAN,FOLLOW_BOOLEAN_in_declaration102); 
                    BOOLEAN8_tree = 
                    (CommonTree)adaptor.create(BOOLEAN8)
                    ;
                    root_0 = (CommonTree)adaptor.becomeRoot(BOOLEAN8_tree, root_0);


                    ID9=(Token)match(input,ID,FOLLOW_ID_in_declaration105); 
                    ID9_tree = 
                    (CommonTree)adaptor.create(ID9)
                    ;
                    adaptor.addChild(root_0, ID9_tree);


                    // ../src/antlrPackage/Property.g:33:16: ( COMMA ! ID )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==COMMA) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // ../src/antlrPackage/Property.g:33:17: COMMA ! ID
                    	    {
                    	    COMMA10=(Token)match(input,COMMA,FOLLOW_COMMA_in_declaration108); 

                    	    ID11=(Token)match(input,ID,FOLLOW_ID_in_declaration111); 
                    	    ID11_tree = 
                    	    (CommonTree)adaptor.create(ID11)
                    	    ;
                    	    adaptor.addChild(root_0, ID11_tree);


                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    SEMICOL12=(Token)match(input,SEMICOL,FOLLOW_SEMICOL_in_declaration115); 

                    }
                    break;
                case 2 :
                    // ../src/antlrPackage/Property.g:34:5: REAL ^ ID ( COMMA ! ID )* SEMICOL !
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    REAL13=(Token)match(input,REAL,FOLLOW_REAL_in_declaration122); 
                    REAL13_tree = 
                    (CommonTree)adaptor.create(REAL13)
                    ;
                    root_0 = (CommonTree)adaptor.becomeRoot(REAL13_tree, root_0);


                    ID14=(Token)match(input,ID,FOLLOW_ID_in_declaration125); 
                    ID14_tree = 
                    (CommonTree)adaptor.create(ID14)
                    ;
                    adaptor.addChild(root_0, ID14_tree);


                    // ../src/antlrPackage/Property.g:34:14: ( COMMA ! ID )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==COMMA) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // ../src/antlrPackage/Property.g:34:15: COMMA ! ID
                    	    {
                    	    COMMA15=(Token)match(input,COMMA,FOLLOW_COMMA_in_declaration128); 

                    	    ID16=(Token)match(input,ID,FOLLOW_ID_in_declaration131); 
                    	    ID16_tree = 
                    	    (CommonTree)adaptor.create(ID16)
                    	    ;
                    	    adaptor.addChild(root_0, ID16_tree);


                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);


                    SEMICOL17=(Token)match(input,SEMICOL,FOLLOW_SEMICOL_in_declaration135); 

                    }
                    break;
                case 3 :
                    // ../src/antlrPackage/Property.g:35:5: INT ^ ID ( COMMA ! ID )* SEMICOL !
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    INT18=(Token)match(input,INT,FOLLOW_INT_in_declaration142); 
                    INT18_tree = 
                    (CommonTree)adaptor.create(INT18)
                    ;
                    root_0 = (CommonTree)adaptor.becomeRoot(INT18_tree, root_0);


                    ID19=(Token)match(input,ID,FOLLOW_ID_in_declaration145); 
                    ID19_tree = 
                    (CommonTree)adaptor.create(ID19)
                    ;
                    adaptor.addChild(root_0, ID19_tree);


                    // ../src/antlrPackage/Property.g:35:13: ( COMMA ! ID )*
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==COMMA) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // ../src/antlrPackage/Property.g:35:14: COMMA ! ID
                    	    {
                    	    COMMA20=(Token)match(input,COMMA,FOLLOW_COMMA_in_declaration148); 

                    	    ID21=(Token)match(input,ID,FOLLOW_ID_in_declaration151); 
                    	    ID21_tree = 
                    	    (CommonTree)adaptor.create(ID21)
                    	    ;
                    	    adaptor.addChild(root_0, ID21_tree);


                    	    }
                    	    break;

                    	default :
                    	    break loop5;
                        }
                    } while (true);


                    SEMICOL22=(Token)match(input,SEMICOL,FOLLOW_SEMICOL_in_declaration155); 

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "declaration"


    public static class booleanNegationExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "booleanNegationExpression"
    // ../src/antlrPackage/Property.g:244:1: booleanNegationExpression : ( NOT ^)* constantValue ;
    public final PropertyParser.booleanNegationExpression_return booleanNegationExpression() throws RecognitionException {
        PropertyParser.booleanNegationExpression_return retval = new PropertyParser.booleanNegationExpression_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token NOT23=null;
        PropertyParser.constantValue_return constantValue24 =null;


        CommonTree NOT23_tree=null;

        try {
            // ../src/antlrPackage/Property.g:245:3: ( ( NOT ^)* constantValue )
            // ../src/antlrPackage/Property.g:245:3: ( NOT ^)* constantValue
            {
            root_0 = (CommonTree)adaptor.nil();


            // ../src/antlrPackage/Property.g:245:3: ( NOT ^)*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==NOT) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // ../src/antlrPackage/Property.g:245:4: NOT ^
            	    {
            	    NOT23=(Token)match(input,NOT,FOLLOW_NOT_in_booleanNegationExpression987); 
            	    NOT23_tree = 
            	    (CommonTree)adaptor.create(NOT23)
            	    ;
            	    root_0 = (CommonTree)adaptor.becomeRoot(NOT23_tree, root_0);


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            pushFollow(FOLLOW_constantValue_in_booleanNegationExpression992);
            constantValue24=constantValue();

            state._fsp--;

            adaptor.addChild(root_0, constantValue24.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "booleanNegationExpression"


    public static class signExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "signExpression"
    // ../src/antlrPackage/Property.g:249:1: signExpression : ( PLUS ^| MINUS ^)* booleanNegationExpression ;
    public final PropertyParser.signExpression_return signExpression() throws RecognitionException {
        PropertyParser.signExpression_return retval = new PropertyParser.signExpression_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token PLUS25=null;
        Token MINUS26=null;
        PropertyParser.booleanNegationExpression_return booleanNegationExpression27 =null;


        CommonTree PLUS25_tree=null;
        CommonTree MINUS26_tree=null;

        try {
            // ../src/antlrPackage/Property.g:250:2: ( ( PLUS ^| MINUS ^)* booleanNegationExpression )
            // ../src/antlrPackage/Property.g:250:2: ( PLUS ^| MINUS ^)* booleanNegationExpression
            {
            root_0 = (CommonTree)adaptor.nil();


            // ../src/antlrPackage/Property.g:250:2: ( PLUS ^| MINUS ^)*
            loop8:
            do {
                int alt8=3;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==PLUS) ) {
                    alt8=1;
                }
                else if ( (LA8_0==MINUS) ) {
                    alt8=2;
                }


                switch (alt8) {
            	case 1 :
            	    // ../src/antlrPackage/Property.g:250:3: PLUS ^
            	    {
            	    PLUS25=(Token)match(input,PLUS,FOLLOW_PLUS_in_signExpression1004); 
            	    PLUS25_tree = 
            	    (CommonTree)adaptor.create(PLUS25)
            	    ;
            	    root_0 = (CommonTree)adaptor.becomeRoot(PLUS25_tree, root_0);


            	    }
            	    break;
            	case 2 :
            	    // ../src/antlrPackage/Property.g:250:9: MINUS ^
            	    {
            	    MINUS26=(Token)match(input,MINUS,FOLLOW_MINUS_in_signExpression1007); 
            	    MINUS26_tree = 
            	    (CommonTree)adaptor.create(MINUS26)
            	    ;
            	    root_0 = (CommonTree)adaptor.becomeRoot(MINUS26_tree, root_0);


            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            pushFollow(FOLLOW_booleanNegationExpression_in_signExpression1013);
            booleanNegationExpression27=booleanNegationExpression();

            state._fsp--;

            adaptor.addChild(root_0, booleanNegationExpression27.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "signExpression"


    public static class multiplyingExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "multiplyingExpression"
    // ../src/antlrPackage/Property.g:252:1: multiplyingExpression : signExpression ( ( MULT ^| DIV ^| MOD ^) signExpression )* ;
    public final PropertyParser.multiplyingExpression_return multiplyingExpression() throws RecognitionException {
        PropertyParser.multiplyingExpression_return retval = new PropertyParser.multiplyingExpression_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token MULT29=null;
        Token DIV30=null;
        Token MOD31=null;
        PropertyParser.signExpression_return signExpression28 =null;

        PropertyParser.signExpression_return signExpression32 =null;


        CommonTree MULT29_tree=null;
        CommonTree DIV30_tree=null;
        CommonTree MOD31_tree=null;

        try {
            // ../src/antlrPackage/Property.g:253:3: ( signExpression ( ( MULT ^| DIV ^| MOD ^) signExpression )* )
            // ../src/antlrPackage/Property.g:253:5: signExpression ( ( MULT ^| DIV ^| MOD ^) signExpression )*
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_signExpression_in_multiplyingExpression1023);
            signExpression28=signExpression();

            state._fsp--;

            adaptor.addChild(root_0, signExpression28.getTree());

            // ../src/antlrPackage/Property.g:253:20: ( ( MULT ^| DIV ^| MOD ^) signExpression )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==DIV||(LA10_0 >= MOD && LA10_0 <= MULT)) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // ../src/antlrPackage/Property.g:253:21: ( MULT ^| DIV ^| MOD ^) signExpression
            	    {
            	    // ../src/antlrPackage/Property.g:253:21: ( MULT ^| DIV ^| MOD ^)
            	    int alt9=3;
            	    switch ( input.LA(1) ) {
            	    case MULT:
            	        {
            	        alt9=1;
            	        }
            	        break;
            	    case DIV:
            	        {
            	        alt9=2;
            	        }
            	        break;
            	    case MOD:
            	        {
            	        alt9=3;
            	        }
            	        break;
            	    default:
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 9, 0, input);

            	        throw nvae;

            	    }

            	    switch (alt9) {
            	        case 1 :
            	            // ../src/antlrPackage/Property.g:253:22: MULT ^
            	            {
            	            MULT29=(Token)match(input,MULT,FOLLOW_MULT_in_multiplyingExpression1027); 
            	            MULT29_tree = 
            	            (CommonTree)adaptor.create(MULT29)
            	            ;
            	            root_0 = (CommonTree)adaptor.becomeRoot(MULT29_tree, root_0);


            	            }
            	            break;
            	        case 2 :
            	            // ../src/antlrPackage/Property.g:253:28: DIV ^
            	            {
            	            DIV30=(Token)match(input,DIV,FOLLOW_DIV_in_multiplyingExpression1030); 
            	            DIV30_tree = 
            	            (CommonTree)adaptor.create(DIV30)
            	            ;
            	            root_0 = (CommonTree)adaptor.becomeRoot(DIV30_tree, root_0);


            	            }
            	            break;
            	        case 3 :
            	            // ../src/antlrPackage/Property.g:253:33: MOD ^
            	            {
            	            MOD31=(Token)match(input,MOD,FOLLOW_MOD_in_multiplyingExpression1033); 
            	            MOD31_tree = 
            	            (CommonTree)adaptor.create(MOD31)
            	            ;
            	            root_0 = (CommonTree)adaptor.becomeRoot(MOD31_tree, root_0);


            	            }
            	            break;

            	    }


            	    pushFollow(FOLLOW_signExpression_in_multiplyingExpression1037);
            	    signExpression32=signExpression();

            	    state._fsp--;

            	    adaptor.addChild(root_0, signExpression32.getTree());

            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "multiplyingExpression"


    public static class addingExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "addingExpression"
    // ../src/antlrPackage/Property.g:256:1: addingExpression : multiplyingExpression ( ( PLUS ^| MINUS ^) multiplyingExpression )* ;
    public final PropertyParser.addingExpression_return addingExpression() throws RecognitionException {
        PropertyParser.addingExpression_return retval = new PropertyParser.addingExpression_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token PLUS34=null;
        Token MINUS35=null;
        PropertyParser.multiplyingExpression_return multiplyingExpression33 =null;

        PropertyParser.multiplyingExpression_return multiplyingExpression36 =null;


        CommonTree PLUS34_tree=null;
        CommonTree MINUS35_tree=null;

        try {
            // ../src/antlrPackage/Property.g:257:3: ( multiplyingExpression ( ( PLUS ^| MINUS ^) multiplyingExpression )* )
            // ../src/antlrPackage/Property.g:257:5: multiplyingExpression ( ( PLUS ^| MINUS ^) multiplyingExpression )*
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_multiplyingExpression_in_addingExpression1052);
            multiplyingExpression33=multiplyingExpression();

            state._fsp--;

            adaptor.addChild(root_0, multiplyingExpression33.getTree());

            // ../src/antlrPackage/Property.g:257:27: ( ( PLUS ^| MINUS ^) multiplyingExpression )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( (LA12_0==MINUS||LA12_0==PLUS) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // ../src/antlrPackage/Property.g:257:28: ( PLUS ^| MINUS ^) multiplyingExpression
            	    {
            	    // ../src/antlrPackage/Property.g:257:28: ( PLUS ^| MINUS ^)
            	    int alt11=2;
            	    int LA11_0 = input.LA(1);

            	    if ( (LA11_0==PLUS) ) {
            	        alt11=1;
            	    }
            	    else if ( (LA11_0==MINUS) ) {
            	        alt11=2;
            	    }
            	    else {
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 11, 0, input);

            	        throw nvae;

            	    }
            	    switch (alt11) {
            	        case 1 :
            	            // ../src/antlrPackage/Property.g:257:29: PLUS ^
            	            {
            	            PLUS34=(Token)match(input,PLUS,FOLLOW_PLUS_in_addingExpression1056); 
            	            PLUS34_tree = 
            	            (CommonTree)adaptor.create(PLUS34)
            	            ;
            	            root_0 = (CommonTree)adaptor.becomeRoot(PLUS34_tree, root_0);

